# Iqraa

./: .dockerignore  .env  .gitignore  .gitmodules  DataDesign  Dockerfile  README.md  goodreads.js  login.html  main.html  main.js  misc.js  package-lock.json  package.json  preload.js  webServer.js
DOC/: ExcelFormat.xlsx  ExcelLoad.md  goodreads.md
backend/: bookData.js  config.js  connection.js  doubleLinkedList.js  encryption.js  epubReader.js  files.js  front.js  googleAPI.js  hindawi.js  misc.js  pg.js  searchEngine.js  server.js  sqlite.js  test.js
backend/Iqraa/: iqraa.cpp
backend/engine/: CMakeLists.txt  main.cpp  parser.cpp
data/: mainView.json  myBooks.json  read.json  users.json
static/: Addbook.html  author.html  bookView.html  home.html  library.html  login.html  main.html  notes.html  riwaq.html  settings.html  signUp.html  signup.html
static/JS/: List.js  SecondaryWindow.js  addBook.js  bookView.js  components.js  header.js  home.js  indexedDB.js  library.js  mainView.js  misc.js  ocr.js  register.js  riwaq.js  search.js  sign.js  signup.js  theme.js  userSection.js
static/assets/: login_wall.avif  signUp.json
static/components/: addToMyBooks.js  bookCard.js  closeSession.js  confirmWindow.js  datePicker.js  headerTag.js  initLibrary.js  libraryAbout.js  libraryButton.js  libraryExtensions.js  libraryParties.js  libraryResource.js  librarySection.js  loadAuthorPage.js  loadBookDataPage.js  loadBookReview.js  loadSection.js  ocrScreen.js  riwaqScreen.js  riwaqUser.js  riwaqWelcome.js  searchResult.js  spinner.js  userReview.js
static/style/: bookView.css  fonts.css  (+8 more)
(+3 files in other folders)
